# dmxfy

./: .dir-locals.el  README.md  pyproject.toml
src/dmxfy/: __init__.py
src/dmxfy/cli/: __init__.py  cli.py
src/dmxfy/client/: __init__.py  client.py
src/dmxfy/config/: __init__.py  config.py
src/dmxfy/exceptions/: __init__.py  exceptions.py
src/dmxfy/languages/: __init__.py  languages.py
tests/: test_cli.py  test_client.py  test_config.py  test_exceptions.py
