[project]
name = "dmxfy"
version = "0.5.4"
description = "大语言模型翻译器终端"
readme = "README.md"
authors = [
    { name = "workspc", email = "wokspc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=6.2.1",
]

[project.scripts]
dmxfy = "dmxfy:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright[nodejs]>=1.1.403",
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "types-requests",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/dmxfy",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose"
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic", "tests"]
ignore_missing_imports = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
exclude = ["alembic", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
